# matchbox

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
api/: __init__.py  app.py  calculator.py  data.py  logger.py  ratelimiter.py  route.py
static/: scripts.js  style.css
tests/: mock_donors.csv  test_calculator.py  test_data.py  test_route.py  test_url_hydration.py
web/: crf-explainer.html  index.html  offcanvas-bottom-parts.html  offcanvas-end-parts.html  offcanvas-start-parts.html
