[project]
name = "matchbox"
version = "0.1.0"
description = "A web app version of the ODT cRF calculator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "slowapi>=0.1.9",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 120
extend-select = ["I"]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
